# skills.bzl

./: .bazelignore  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  skills.lock.schema.json
.github/workflows/: ci.yaml
e2e/smoke/: BUILD  MODULE.bazel  README.md  skills.lock.json
skills/: BUILD.bazel  defs.bzl  extensions.bzl
skills/private/: BUILD.bazel  lockfile.bzl  repository.bzl  stage.bzl  sync_skills.sh  verify_sync.sh
