load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//skills/private:stage",
        "@bazel_lib//lib:copy_to_directory",
        "@rules_shell//shell:rules_bzl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [
        "//skills/private:lockfile",
        "//skills/private:repository",
    ],
)
