bazel_dep(name = "skills.bzl", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

local_path_override(
    module_name = "skills.bzl",
    path = "../..",
)

skills = use_extension("@skills.bzl//skills:extensions.bzl", "skills")
skills.hub(lockfile = "//:skills.lock.json")
use_repo(skills, "skills")
